# metadata_ingestion

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  run_tests.sh  test_api_connector.py  test_odbc_connector.py
pipelines/: duck_db.json  placeholder_api.json
src/: __init__.py  dagster_manager.py
src/config/: models.py
src/connectors/: api_connector.py  base.py  factory.py  odbc_connector.py
src/metadata_ingestion/: __init__.py  dagster_manager.py  db_utils.py
src/metadata_ingestion/config/: models.py
src/metadata_ingestion/connectors/: api_connector.py  base.py  factory.py  odbc_connector.py
tests/: __init__.py  conftest.py  test_api_connector.py  test_odbc_connector.py  test_write_methods.py
