[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata_ingestion"
version = "0.1.0"
description = "Metadata ingestion package with factory pattern to ingest data to delta lake from diverse sources."
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "dagster>=1.5.0",
    "duckdb>=1.3.1",
    "pyodbc>=5.2.0",
    "deltalake>=0.17.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metadata_ingestion"]

[dependency-groups]
dev = [
    "commitizen>=4.2.2,<5",
    "ruff>=0.9.7,<0.13",
    "pre-commit<5",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["F","E","W","B","I","Q","UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = ["pyproject.toml:version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
